src/mongo/util/stringutils.cpp
@@ -29,8 +29,11 @@
 
 #include "mongo/platform/basic.h"
 
+#include <cctype>
+
 #include "mongo/util/stringutils.h"
 
+#include "mongo/base/parse_number.h"
 #include "mongo/util/hex.h"
 
 namespace mongo {
@@ -222,6 +225,19 @@ std::string escape(StringData sd, bool escape_slash) {
         }
     }
     return ret.str();
+}
+
+boost::optional<size_t> parseUnsignedBase10Integer(StringData fieldName) {
+    // Do not accept positions like '-4' or '+4'
+    if (!std::isdigit(fieldName[0])) {
+        return boost::none;
+    }
+    unsigned int index;
+    auto status = parseNumberFromStringWithBase<unsigned int>(fieldName, 10, &index);
+    if (status.isOK()) {
+        return static_cast<size_t>(index);
+    }
+    return boost::none;
 }
 
 }  // namespace mongo
